# htms

./: .gitignore  README.md  pyproject.toml
example_html/: bc_1.html  multiple_requests_bbc.html  national_geographic.html  phys_3_multiple.html  table_example.html
htms/: HTMSLParser.py  __init__.py  start.py
sample_html/: sample_htms_1.html  sample_htms_astro_3_pagination.html  sample_htms_nested.html  sample_htms_phys_1.html  sample_htms_phys_2_request_list.html  sample_htms_phys_3_multiple.html
src/htms/: HTMSLParser.py  TemplateEngine.py  __init__.py  __main__.py  config.toml  constants.py  utils.py
src/htms/example_html/: astro_pagination.html  bc_1.html  bc_nested.html  freecodecamp_title.html  json_api_example.html  muz_news.html  phys_1.html  phys_2_request_list.html
src/htms/examples/: __main__.py
src/htms/tags/: ExportTag.py  ExportTagBase.py  HeaderTag.py  ItemTag.py  ListTag.py  RequestListTag.py  RequestTag.py  TagBase.py  VariableTag.py  constants.py
