[tool.poetry]
name = "htms"
version = "0.1.9"
description = "A Python web scraping library using HTML"
authors = ["BowangLan <bwldev85@uw.edu>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/BowangLan/htms"
repository = "https://github.com/BowangLan/htms"
keywords = ["web scraping", "HTML"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Text Processing :: Markup :: HTML",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
lxml = "^5.3.0"
rich = "^13.8.0"

[tool.poetry.group.dev.dependencies]
rich = "^13.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
